# Competitor-check

./: Competitor check  README.md
pub-price-intel/: .env.example  Dockerfile  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
pub-price-intel/.devcontainer/: devcontainer.json
pub-price-intel/.github/workflows/: ci.yml
pub-price-intel/data/: catalog.csv  gold_sample.csv
pub-price-intel/matcher/: __init__.py  match.py  utils.py
pub-price-intel/ops/: __init__.py  prefect_flow.py
pub-price-intel/parser/: __init__.py  normalise.py
pub-price-intel/rules/: glasgow.yml
pub-price-intel/scrapers/: __init__.py  ark_html.py  base.py  nicholsons_html.py  oneills_html.py  spoons_pdf.py  walkabout_html.py
